@@ -1,3 +1,9 @@
+2013-02-12  Sanimir Agovic  <sanimir.agovic@intel.com>
+
+	* gdb.server/no-thread-db.exp: New file.
+	* gdb.server/no-thread-db.c: New file.
+	* gdb.server/Makefile.in (EXECUTABLES): Add no-thread-db.
+
 2013-02-11  Doug Evans  <dje@google.com>
 
 	* gdb.base/printcmds.exp (test_printf_with_dfp): Add test for printing
