@@ -1,3 +1,8 @@
+2013-02-12  Sanimir Agovic  <sanimir.agovic@intel.com>
+
+	* thread-db.c (thread_db_get_tls_address): NULL pointer check
+	thread_db.
+
 2013-02-07  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
 	* linux-aarch64-low.c (aarch64_arch_setup): Clamp
